organized code for docker compose